# packages/api/openapi.json
@@ -150,6 +150,12 @@
                                 "enum": [
                                   "other"
                                 ]
+                              },
+                              {
+                                "type": "string",
+                                "enum": [
+                                  "runLength"
+                                ]
                               }
                             ]
                           },
